[workspace]

members = [
    "src/auxil/range-alloc",
    "src/backend/dx11",
    "src/backend/dx12",
    "src/backend/empty",
    "src/backend/gl",
    "src/backend/metal",
    "src/backend/vulkan",
    "src/hal",
    "src/warden",
    "examples",
]

[replace]
"winit:0.20.0-alpha2" = { git = 'https://github.com/kosyak/winit.git', branch = 'master' }
"glutin:0.22.0-alpha1" = { git = 'https://github.com/kosyak/glutin.git', branch = 'master' }
